<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto" >
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.pro.watts_hut.activities.MovieDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">


        <RelativeLayout
            android:id="@+id/thumbnailContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/detail_thumbnail"
                android:layout_width="167dp"
                android:layout_height="211dp"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:color/transparent" />

            <ImageButton
                android:id="@+id/star_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="false"
                android:layout_alignParentTop="false"
                android:layout_alignRight="@+id/detail_thumbnail"
                android:background="@android:color/transparent"
                android:onClick="switchFavorite"
                android:tint="@color/yellowStar"
                app:srcCompat="@drawable/ic_star_outline"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="243dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp"
            tools:text="Very Long Movie Title"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toRightOf="@+id/thumbnailContainer"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="top|left"
            android:text="@string/ratings"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="18sp"
            tools:text="Ratings"
            app:layout_constraintLeft_toRightOf="@+id/thumbnailContainer"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/release_date" />

        <Button
            android:id="@+id/reviewButton"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/trailer"
            android:onClick="goToReviews"
            android:text="@string/reviews"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/ratings"
            tools:text="Reviews"
            app:layout_constraintLeft_toRightOf="@+id/thumbnailContainer"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="top|left"
            android:text="@string/release_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            app:layout_constraintLeft_toRightOf="@+id/thumbnailContainer"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="03.02.2014"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView2" />

        <TextView
            android:id="@+id/ratings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="* * * *\n 10 ratings"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/watchTrailer"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="Trailer"
            android:onClick="goToTrailer"
            android:text="Trailer"
            android:visibility="visible"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toRightOf="@+id/reviewButton"
            app:layout_constraintRight_toRightOf="@+id/synopsis"
            app:layout_constraintTop_toBottomOf="@+id/ratings"
            tools:text="Trailer" />


        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:gravity="top|left"
                android:text="@string/synopsis"
                android:padding="6dp"
                android:fontFamily="casual"
            android:id="@+id/textView3"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/thumbnailContainer" />

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="7dp"
            android:gravity="top|left"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintLeft_toLeftOf="@+id/textView3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis nisl at metus vestibulum, a dapibus diam tempor. Sed a nisl eu justo volutpat ultricies. Maecenas eget velit iaculis, accumsan felis non, porta orci. Etiam odio eros, elementum id congue et, vulputate efficitur neque. Nullam vestibulum metus vel justo sollicitudin, vel volutpat est vulputate. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sollicitudin, arcu eu consequat faucibus, massa metus laoreet turpis, et lobortis libero sapien ac magna. Maecenas sodales ultricies mollis. Sed rutrum leo pharetra blandit condimentum. Praesent mattis velit purus, at condimentum arcu pretium in.  Integer pharetra nulla suscipit ex sollicitudin, ac laoreet tellus egestas. In hac habitasse platea dictumst. Nunc rhoncus blandit rutrum. Proin eget luctus risus, nec accumsan mi. Maecenas congue, nisi vel dapibus sollicitudin, leo odio aliquet erat, eget tempus velit lorem eu nunc. Vestibulum sed turpis tristique, scelerisque ipsum ac, placerat elit. Vestibulum maximus aliquet ultrices. In eget elit ipsum. Nulla facilisi. Integer dapibus nibh nunc, vitae dignissim metus cursus sit amet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pulvinar vel nisl at cursus. Nunc pharetra, quam ut iaculis varius, dui libero elementum velit, eget fermentum felis ante eget justo. Donec consectetur molestie est vitae rutrum."
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>
</layout>